修复网站地址
https://tinyzzh.github.io

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="https://github.com/TinyZzh//">
+  <link rel="canonical" href="https://tinyzzh.github.io//">
   <link rel="alternate" type="application/rss+xml" title="TinyZ's Blog" href="/feed.xml">
 
 </head>
