增加版权信息说明

--- a/about/index.html
+++ b/about/index.html
@@ -162,10 +162,14 @@
   <li>Github: <a href="https://github.com/TinyZzh">TinyZzh</a></li>
 </ul>
 
-<h1 id="section">微信公众号:</h1>
+<h1 id="section">关于版权</h1>
+
+<p>　　本博客内容如无特别说明均属本人原创，采用知识共享<a href="http://creativecommons.org/licenses/by/3.0/cn/">「署名 3.0 中国大陆」许可协议</a>授权。
+意思是，在没有特别说明的情况下，您可以自由转载我的博文，仅需注明原文作者和原文链接地址。</p>
+
+<h1 id="section-1">微信公众号:</h1>
 
 <p><img src="/images/weixin.jpg" alt="Alt text" /></p>
-
 
   </section>
 
