--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="https://tinyzzh.github.io//about/">
+  <link rel="canonical" href="http://localhost:4000//about/">
   <link rel="alternate" type="application/rss+xml" title="TinyZ's Blog" href="/feed.xml">
 
 </head>
@@ -162,12 +162,12 @@
   <li>Github: <a href="https://github.com/TinyZzh">TinyZzh</a></li>
 </ul>
 
-<h1 id="section">关于版权</h1>
+<h1 id="关于版权">关于版权</h1>
 
 <p>　　本博客内容如无特别说明均属本人原创，采用知识共享<a href="http://creativecommons.org/licenses/by/3.0/cn/">「署名 3.0 中国大陆」许可协议</a>授权。
 意思是，在没有特别说明的情况下，您可以自由转载我的博文，仅需注明原文作者和原文链接地址。</p>
 
-<h1 id="section-1">微信公众号:</h1>
+<h1 id="微信公众号">微信公众号:</h1>
 
 <p><img src="/images/weixin.jpg" alt="Alt text" /></p>
 
@@ -176,7 +176,7 @@
 </article>
     </div>
     <footer class="footer">
-  <span class="footer__copyright">&copy; 2017 - TinyZ版权所有 .</span>
+  <span class="footer__copyright">&copy; 2019 - TinyZ版权所有 .</span>
 </footer> 
 
 <script type="text/javascript" src="/js/jquery-1.12.3.min.js"></script>
