--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ title: Sorry
 {% include recent-post.html %}
 <form class="search-form inline">
     <div id="search-container">
-        <input type="text" id="search-input" class="search" placeholder="Search">
+        <input type="text" id="search-input" class="search" placeholder="{{ site.data.ui-text[site.locale].search | default: 'Search' }}">
     </div>
 </form>
 <ul id="results-container" class="results-search"></ul>
