--- a/_pages/archive.html
+++ b/_pages/archive.html
@@ -9,7 +9,7 @@ infinite: yes
 <div class="archive tag-master">
 	<form class="search-form inline">
 		<div id="search-container">
-			<input type="text" id="search-input" class="search" placeholder="Search">
+			<input type="text" id="search-input" class="search" placeholder="{{ site.data.ui-text[site.locale].search | default: 'Search' }}">
 		</div>
 	</form>
 	<ul id="results-container" class="results-search"></ul>
